[project]
name = "satvis"
version = "0.2.1"
description = "Satellite LOS visibility calculator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.8.5"
classifiers = [
    "Programming Language :: Python :: 2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Dylan Penn", email = "dylanrpenn@vt.edu"}
]
dependencies = [
    "matplotlib>=3.5",
    "intervaltree>=3.1",
    "numpy",
    "intervaltree>=3.1",
]

[project.optional-dependencies] 
dev = [
    "flake8",
    "pylint",
    "pytest",
    "flake8-bugbear==22.4.25",
    "flake8-builtins==1.5.3",
    "flake8-docstrings==1.6.0",
    "flake8-plugin-utils==1.3.2",
    "flake8-pytest-style==1.6.0",
    "flake8-rst-docstrings==0.2.6",
    "black>=22.3.0",
    "isort[colors]",
]

[project.urls]
"Homepage" = "https://github.com/dylan906/satvis"

[build-system]
requires = [
    "setuptools>=64",
    "wheel>=0.29.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "satvis", # folder all the modules are in
]
zip-safe = false

[tool.isort]
# Play nicely with black
profile = "black"
# Use .gitingore to skip files
skip_gitignore = true
# Line length rules
line_length = 79
# Enforce Unix line endings
line_ending = "\n"
# Whitelist first party imports
known_first_party = [
    "satvis",
]
# Import headers
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_firstparty = "satvis Imports"
import_heading_localfolder = "Local Imports"
